--- a/DemoSpringMVC/WebContent/WEB-INF/views/index.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/index.html
@@ -15,6 +15,15 @@
 <title>Trang chủ</title>
 </head>
 <body>
+	<div class="col-2 sticky">
+		<div th:if="${categories.empty}">
+			<p>no items available</p>
+		</div>
+		<div th:each="category: ${categories}" class="categories">
+			<button class="btn btn-success" th:text="${category.name}"
+				th:id="${category.name}" th:onclick="'categoryClick(this);'"></button>
+		</div>
+	</div>
 	<div class="container">
 		<div class="d-flex bg-gray">
 			<div class="flex-fill border-left">email</div>
@@ -93,16 +102,7 @@
 				</div> -->
 
 		<div class="row">
-			<div class="col-2 sticky">
-				<div th:if="${categories.empty}">
-					<p>no items available</p>
-				</div>
-				<div th:each="category: ${categories}" class="categories">
-					<button class="btn btn-success" th:text="${category.name}"
-						th:id="${category.name}" th:onclick="'categoryClick(this);'"></button>
-				</div>
-			</div>
-			<div class ="col-2"></div>
+			<div class="col-2"></div>
 			<div id="carousel" class="carousel slide col-10" data-ride="carousel">
 
 				<!-- Indicators -->
@@ -164,7 +164,7 @@
 								<div class="col">
 									<img class="d-block w-100 h-100"
 										style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[0].getImg()}" alt="1 slide">
+										th:src="${itemTopSale[0].getImg()}" alt="1 slide" th:onclick="|topSaleImgClick('${itemTopSale[0].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[0].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[0].getAmount()}"></p>
@@ -172,7 +172,7 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[1].getImg()}" alt="2 slide">
+										th:src="${itemTopSale[1].getImg()}" alt="2 slide" th:onclick="|topSaleImgClick('${itemTopSale[1].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[1].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[1].getAmount()}"></p>
@@ -180,7 +180,7 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[2].getImg()}" alt="3 slide">
+										th:src="${itemTopSale[2].getImg()}" alt="3 slide" th:onclick="|topSaleImgClick('${itemTopSale[2].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[2].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[2].getAmount()}"></p>
@@ -194,7 +194,7 @@
 							<div class="row">
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[3].getImg()}" alt="1 slide">
+										th:src="${itemTopSale[3].getImg()}" alt="4 slide" th:onclick="|topSaleImgClick('${itemTopSale[3].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[3].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[3].getAmount()}"></p>
@@ -202,7 +202,7 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[4].getImg()}" alt="1 slide">
+										th:src="${itemTopSale[4].getImg()}" alt="5 slide" th:onclick="|topSaleImgClick('${itemTopSale[4].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[4].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[4].getAmount()}"></p>
@@ -210,7 +210,7 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[5].getImg()}" alt="1 slide">
+										th:src="${itemTopSale[5].getImg()}" alt="6 slide" th:onclick="|topSaleImgClick('${itemTopSale[5].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[5].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[5].getAmount()}"></p>
@@ -224,7 +224,7 @@
 							<div class="row">
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[6].getImg()}" alt="1 slide">
+										th:src="${itemTopSale[6].getImg()}" alt="7 slide" th:onclick="|topSaleImgClick('${itemTopSale[6].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[6].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[6].getAmount()}"></p>
@@ -232,7 +232,7 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[7].getImg()}" alt="1 slide">
+										th:src="${itemTopSale[7].getImg()}" alt="8 slide" th:onclick="|topSaleImgClick('${itemTopSale[7].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[7].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[7].getAmount()}"></p>
@@ -240,7 +240,7 @@
 								</div>
 								<div class="col">
 									<img class="d-block w-100" style="width: 100%; height: 100%;"
-										th:src="${itemTopSale[8].getImg()}" alt="1 slide">
+										th:src="${itemTopSale[8].getImg()}" alt="9 slide" th:onclick="|topSaleImgClick('${itemTopSale[8].getId()}')|">
 									<div class="text-block">
 										<h3 th:text="${itemTopSale[8].getName()}"></h3>
 										<p th:text="'Sold: ' + ${itemTopSale[8].getAmount()}"></p>
@@ -388,24 +388,10 @@
 			</div>
 		</div>
 
-		<div id="categoryViewer">
-			<br>
-		<br>
-		<br><br>
-		<br>
-		<br>
+		<div id="categoryViewer" style="height: 500px">
 		</div>
-		<br>
-		<br>
-		<br>
-		<br><br>
-		<br><br>
-		<br><br>
-		<br><br>
-		<br><br>
-		<br><br>
-		<br><br>
-		<br>
+		<div id="categoryViewerBottom">
+		</div>
 	</div>
 </body>
 <!-- jQuery library -->
