--- a/DemoSpringMVC/WebContent/WEB-INF/views/item.html
+++ b/DemoSpringMVC/WebContent/WEB-INF/views/item.html
@@ -2,9 +2,85 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+<link th:href="@{css/index.css}" rel="stylesheet">
 <title>item</title>
 </head>
 <body>
-item ne
+	<div class="container">
+		<!-- nav bar -->
+		<div class="d-flex bg-gray">
+			<div class="flex-fill border-left">email</div>
+			<div class="flex-fill">message</div>
+			<div class="flex-fill border-left">icon</div>
+			<div class="flex-fill border-left">flag</div>
+			<div class="flex-fill">login</div>
+		</div>
+
+		<nav class="navbar navbar-expand-sm bg-light navbar-light">
+			<!-- Brand/logo -->
+			<a class="navbar-brand" href="#"> <img
+				th:src="@{img/logo-organi.png}" alt="Logo" style="width: 160px;">
+			</a>
+
+			<!-- Links -->
+			<ul class="navbar-nav">
+				<li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">SHOP</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">PAGES</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">BLOGS</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
+				<li class="nav-item"><a class="nav-link" href="#"> <span
+						class="material-icons"> favorite </span></a></li>
+				<li class=""><a class="nav-link" href="#"><span
+						class="material-icons"> shopping_bag </span><span class="badge badge-pill badge-danger">5</span></a></li>
+				<li class=""><a class="nav-link" href="#">item:</a></li>
+			</ul>
+		</nav>
+		<!-- ./nav bar -->
+
+		<div class="row">
+			<div class="col-6">
+				<div class="card" style="height: 350px; width: auto">
+					<img class="card-img-top" th:src="@{img/default_img.png}"
+						style="height: 100%; width: 100%" id="cardImg" alt="Card image">
+					<div class="card-body">
+						<h4 class="card-title" id="cardTitle"></h4>
+						<p class="card-text">Description</p>
+						<a class="btn btn-success" onclick="buyItem()">Buy</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-6">ashdgagsgdhjagsdhjagdgjasjdhgh</div>
+		</div>
+	</div>
 </body>
+<!-- jQuery library -->
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"
+	integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+	crossorigin="anonymous"></script>
+
+<!-- Popper JS -->
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<!-- axios -->
+<script type="text/javascript"
+	src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.js"></script>
+<script type="text/javascript"
+	src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+
+<!--  my script-->
+<script type="text/javascript" th:src="@{js/item.js}"></script>
 </html>
